Fix : fixed z-index issue

--- a/starterFiles/utils/util.css
+++ b/starterFiles/utils/util.css
@@ -37,6 +37,18 @@
   height: 100%;
 }
 
+.z-index-lg {
+  z-index: 5;
+}
+
+.z-index-md {
+  z-index: 3;
+}
+
+.z-index-sm {
+  z-index: 1;
+}
+
 .box-shadow-dark {
   box-shadow: var(--box-shadow-dark);
 }
